fixing textbox spacing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -56,6 +56,7 @@ textarea{
   height: 100px;
   position: relative;
   margin-left: 50px;
+  margin-top: 5px;
 }
 
 updatedTextarea{
